<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="mcOutputs" Id="{348be703-5613-4067-a248-fe5a6194ff23}">
    <Declaration><![CDATA[TYPE mcOutputs :
STRUCT
	Status			: BOOL;
	Done			: BOOL;
	Busy			: BOOL;
	Active			: BOOL;
	CommandAborted	: BOOL;
	Error			: BOOL;
	ErrorID			: UDINT;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>